@@ -4,8 +4,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class MyWorkerDetails implements UserDetails {
 
@@ -18,7 +18,7 @@ public class MyWorkerDetails implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority(this.worker.getRole());
-        return Arrays.asList(authority);
+        return List.of(authority);
     }
 
     public Worker getWorker() {
